--- a/index.html
+++ b/index.html
@@ -6,18 +6,38 @@
 </head>
 
     <body>
-        <h1><a href="index.html">WEB</a></h1>
+        <h1><a href="index.html">귀여웅게체고야꙳꒰•◡̎•꒱꙳</a></h1>
 <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="bread.html">빵도체고</a></li>
+    <li><a href="cake.html">케쿠도체고</a></li>
+    <li><a href="puppy.html">멍뭄이도체코</a></li>
 </ol>
 
-<h2>WEB</h2>
+<h2>오늘은모하고놀까나</h2>
 <P>
-hello
+안냥하시오? 나의 첫 웹페이지에 온 것을 환영하오●̑ᴗ●̑ 
 </p>
-
+<P>
+    <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web-1-c87audfi0i.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</P>
 </body>
 </html>
      
