--- a/3.html
+++ b/3.html
@@ -1,22 +1,67 @@
 <!doctype html>
 <html>
 <head>
-    <title>WEB1 - JavaScript</title>
+    <link rel="stylesheet" href="style.css">
+    <title>PUPPY</title>
     <meta charset="utf-8">
 </head>
 
     <body>
-        <h1><a href="index.html">WEB</a></h1>
-<ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-</ol>
-
-<h2>JavaScript</h2>
+        <h1><a href="index.html">꙳꒰•◡̎•꒱꙳</a></h1>
+<div id="grid">
+        <ol>
+        <li><a href="1.html" class="saw">COFFEE</a></li>
+        <li><a href="2.html" class="saw">BREAD&CAKE</a></li>
+        <li><a href="3.html" class="saw">PUPPY</a></li>
+    </ol>
+    
+<div id="article">
+<h2>PUPPY</h2>
 <P>
-    JavaScript (/ˈdʒɑːvəskrɪpt/), often abbreviated as JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. As of 2022, 98% of websites use JavaScript on the client side for webpage behavior, often incorporating third-party libraries. All major web browsers have a dedicated JavaScript engine to execute the code on users' devices.
+   CUTE
+   <br>
+</br>
+
+<img src="pupp.gif" width="100%"">
 </p>
+
+</div>
+</div>
+
+<P>
+    <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web-1-c87audfi0i.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</P>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/647ea40fcc26a871b020d918/1h27b1nnv';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
      
